@@ -36,6 +36,7 @@ geos_unit_SOURCES = geos_unit.cpp \
 	io/WKBReaderTest.cpp \
 	io/ByteOrderValuesTest.cpp \
 	operation/overlay/FuzzyPointLocatorTest.cpp \
+	operation/overlay/OffsetPointGeneratorTest.cpp \
 	noding/SegmentNodeTest.cpp \
 	noding/SegmentPointComparatorTest.cpp \
 	noding/SegmentStringTest.cpp \
